--- a/public/2Q1GMgEscobar.html
+++ b/public/2Q1GMgEscobar.html
@@ -3,12 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0"
-    <title> Application Form </title>
+    <title> Schoogle </title>
     <link rel = "icon" href="../assets/stardew-valley-logo-3440218189.png" type="image/png">
     <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
-
+    <h1> Schoogle Application Form </h1>
+    <h2><i> created by Mg06, Mg10, Mg15, Mg16 </i></h2>
+<>
 </body>
 </html>
