graded1 - added video

--- a/public/2Q1GMgEscobar.html
+++ b/public/2Q1GMgEscobar.html
@@ -12,5 +12,10 @@
     <img src="../assets/schoogle header.png" alt="Schoogle logo!!" title="Schoogle">
     <h1> Schoogle Application Form </h1>
     <h2><i> created by Mg06, Mg10, Mg15, Mg16 </i></h2>
+
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/9qNDjbw1SlA?si=wbE5zeEer7nJWliE" 
+    title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; 
+    encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" 
+    allowfullscreen></iframe>
 </body>
 </html>
