added first graded in index

--- a/index.html
+++ b/index.html
@@ -6,4 +6,18 @@
     <title> My Web Page </title>
     <link rel="stylesheet" href="styles.css">
 </head>
+
+<body>
+  <section class="w3-container">
+   <h1>Links to Joanna Elisha Escobar's work</h1>
+   <nav>
+    <ul>
+      <li><a href="./public/2Q1GMgEscobar.html"> First Exercise </a> </li>
+    </ul>
+   </nav>
+  </section>
+  <script>
+  
+  </script>
+</body>
 </html>
