--- a/index.html
+++ b/index.html
@@ -2,20 +2,34 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="2Q Portfolio">
+    <meta name="keywords" content="2Q Portfolio, Projects, Web Development">
+    <meta name="author" content="Joanna Escobar">
+
     <title> My Web Page </title>
+    <link rel = "icon" href="./assets/stardew-valley-logo-3440218189.png" type="image/png">
     <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
-  <section class="w3-container">
-   <h1>Links to Joanna Elisha Escobar's work</h1>
+  <header>
+      <div>
+        <img src="./assets/stardew-valley-logo-3440218189.png" alt="Stardew Valley Logo" title="Website Logo" width="75px" length="75px">
+
+        <h1> Joanna Elisha Escobar's Portfolio</h1>
+      </div>
+   
    <nav>
-    <ul>
-      <li><a href="./public/2Q1GMgEscobar.html"> First Exercise </a> </li>
-    </ul>
+      <ul>
+        <li><a href="./public/2Q1GMgEscobar.html"> First Exercise </a></li>
+        <li><a href="#"> Second Graded </a></li>
+        <li><a href="#"> Third Graded </a></li>
+        <li><a href="#"> Access to our Project </a></li>
+      </ul>
    </nav>
-  </section>
+  </header>
+
   <script>
   
   </script>
