graded task1 buttons now work

--- a/public/2Q1GMgEscobar.html
+++ b/public/2Q1GMgEscobar.html
@@ -49,8 +49,8 @@
     
     <p> What are you waiting for? Apply now! </p>
 
-    <button onclick="tutorApplication"> Tutor </button>
-    <button onclick="studentApplication"> Student </button>
+    <button onclick="tutorApplication()"> Tutor </button>
+    <button onclick="studentApplication()"> Student </button>
 
     <section id="tutorApplicationForm"> 
         <h3> Tutor Applications </h3>
