graded task1 - input elijah's link

--- a/public/2Q1GMgEscobar.html
+++ b/public/2Q1GMgEscobar.html
@@ -9,7 +9,7 @@
 
     <title> Schoogle </title>
     <link rel = "icon" href="../assets/schoogle logo.png" type="image/png">
-    <link rel="stylesheet" href="styles.css"> 
+    <!--link rel="stylesheet" href="styles.css"--> 
 </head>
 
 <body>
@@ -18,7 +18,7 @@
 
         </br/><nav>
             <a href="https://hernandez-enzo.github.io/2QRepositoryMgHernandez/public/2Q1MagnesiumHernandez.html"> Home&nbsp;</a>
-            <a href="https://www.youtube.com/"> Tutor Profiles&nbsp;</a>
+            <a href="https://ethel1wastaken.github.io/CS3_2ndQtrPortfolio/public/2Q1GMgGamis.html"> Tutor Profiles&nbsp;</a>
             <a href="https://renzpshs.github.io/2QRepositoryMgCatapang/2Q1GMagnesiumCatapang.html"> Ratings&nbsp;</a>
             <a href="https://waxingcrescent8193.github.io/2QPortfolioMgESCOBAR/public/2Q1GMgEscobar.html"> <b> Applications </b> </a>
         </nav>
@@ -172,7 +172,7 @@
         <button onclick="submittedStudentApplication"> Submit </button>
     </section>
 
-    <script src="graded1.js"></script>
+    <!--script src="graded1.js"></script-->
 
     <footer>
         &copy; Joanna Escobar, 1st Graded Exercise
