graded task1 - colspan/rowspan

--- a/public/2Q1GMgEscobar.html
+++ b/public/2Q1GMgEscobar.html
@@ -101,37 +101,35 @@
             </tr>
 
             <tr>
-                <td> 1 session </td>
+                <td rowspan="2"> 1 session </td>
                 <td> 3 hours </td>
                 <td> 300 php </td>
             </tr>
 
             <tr>
-                <td> 1 session </td>
+
                 <td> 5 hours </td>
                 <td> 600 php </td>
             </tr>
 
             <tr>
-                <td> 2 sessions </td>
+                <td rowspan="2"> 2 sessions </td>
                 <td> 3 hours </td>
                 <td> 500 php </td>
             </tr>
 
             <tr>
-                <td> 2 sessions </td>
                 <td> 5 hours </td>
                 <td> 700 php </td>
             </tr>
             
             <tr>
-                <td> 3 sessions </td>
+                <td rowspan="2"> 3 sessions </td>
                 <td> 3 hours </td>
                 <td> 650 php </td>
             </tr>
 
             <tr>
-                <td> 3 sessions </td>
                 <td> 5 hours </td>
                 <td> 800 php </td>
             </tr>
