--- a/public/2Q1GMgEscobar.html
+++ b/public/2Q1GMgEscobar.html
@@ -9,7 +9,7 @@
 
     <title> Schoogle </title>
     <link rel = "icon" href="../assets/schoogle logo.png" type="image/png">
-    <!--link rel="stylesheet" href="styles.css"--> 
+    <link rel="stylesheet" href="styles.css"> 
 </head>
 
 <body>
@@ -170,7 +170,7 @@
         <button onclick="submittedStudentApplication"> Submit </button>
     </section>
 
-    <!--script src="graded1.js"></script-->
+    <script src="graded1.js"></script>
 
     <footer>
         &copy; Joanna Escobar, 1st Graded Exercise
