--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
         <li><a href="#"> Second Graded </a></li>
         <li><a href="#"> Third Graded </a></li>
         <li><a href="#"> Access to our Project </a></li>
+        <li><a href=".public/Q21NGMgEscobar.html"> Access to our Project </a></li>
       </ul>
    </nav>
   </header>
