--- a/public/2Q1GMgEscobar.html
+++ b/public/2Q1GMgEscobar.html
@@ -14,7 +14,7 @@
 
 <body>
     <header>
-        <img src="../assets/schoogle header.png" alt="Schoogle logo!!" title="Schoogle">
+        <img src="../assets/1.png" alt="Schoogle logo!!" title="Schoogle" width="60px">
 
         </br/><nav>
             <a href="https://hernandez-enzo.github.io/2QRepositoryMgHernandez/public/2Q1MagnesiumHernandez.html"> Home&nbsp;</a>
@@ -25,7 +25,7 @@
 
     </header>
 
-    <h1> Schoogle Application Form </h1>
+    <h1> Application Form </h1>
 
     <p> "Education is important, and comprehension is key", is what we believe here in Schoogle. Many students now struggle with their 
         lessons, especially in subjects like Math. We aim to make education more understandable for students of all ages. However, 
