graded task 3 redo

--- a/public/Q23GMgEscobar.html
+++ b/public/Q23GMgEscobar.html
@@ -36,7 +36,7 @@
       text-decoration: underline;
     }
 
-    section img:first-child {
+    section > img:first-child {
       display: block;
       width: 25vw;
       height: 25vh;
@@ -44,7 +44,7 @@
       margin-right: auto;
     }
 
-    .container img {
+    .container img{
       width: 50px;
       height: 50px;
       margin-right: 10px;
