--- a/public/2Q1GMgEscobar.html
+++ b/public/2Q1GMgEscobar.html
@@ -9,12 +9,61 @@
 
     <title> Schoogle </title>
     <link rel = "icon" href="../assets/schoogle logo.png" type="image/png">
-    <link rel="stylesheet" href="styles.css"> 
+    <link rel="stylesheet" href="https://hernandez-enzo.github.io/2QRepositoryMgHernandez/public/styles.css"> 
+    <style> 
+        #selectionButtons {
+            text-align: center;
+        }
+
+        div > button {
+            width: 100px;
+            height: 50px;
+            padding: 10px;
+            margin: 10px;
+            font-size: 20px;
+            color: rgb(0,0,0);
+            background-color: rgb(181, 241, 153);
+        }
+
+        label {
+            display: inline-block;
+            width: 300px;
+            text-align: left;
+        }
+
+        section {
+            display: none;
+            text-align: center;
+        }
+
+        section > p {
+            text-align: center;
+        }
+
+        table, th, tr, td {
+            margin-left: auto;
+            margin-right: auto;
+            border: 2px solid white;
+            border-collapse:collapse
+        }
+
+        th {
+            padding-left: 10px;
+            padding-right: 10px;
+        }
+
+        .submission {
+            width: 90px;
+            height: 50px;
+            margin: 10px;
+            font-size: 20px;
+        }
+    </style>
 </head>
 
 <body>
     <header>
-        <div>
+        <div class="navbar">
             <img src="../assets/1.png" alt="Schoogle logo!!" title="Schoogle" width="60px" id="logoHeaderImage">
 
             <p id="logoHeader"> Schoogle </p>
