graded task2 repolishing

--- a/public/2Q1GMgEscobar.html
+++ b/public/2Q1GMgEscobar.html
@@ -9,18 +9,18 @@
 
     <title> Schoogle | Applications </title>
     <link rel = "icon" href="../assets/schoogle logo.png" type="image/png">
-    <link rel="stylesheet" href="graded2styles.css"> 
+    <link rel="stylesheet" href="https://hernandez-enzo.github.io/2QRepositoryMgHernandez/public/groupstyles.css"> 
     <style>
         * {
             color: #ffffff;
+            font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
         }
 
-        body {
-            font-family: 'Verdana', Geneva, Tahoma, sans-serif;
+        #navbar__logo {
+            font-family: 'Kumbh Sans', sans-serif;
         }
-
         a:visited {
-            color: rgb(197, 98, 255);
+            color: rgb(190, 127, 226);
         }
 
         body div, section, footer {
@@ -53,6 +53,7 @@
 
         #selectionButtons {
             text-align: center;
+            padding: 20px;
         }
 
         div > button {
@@ -111,6 +112,11 @@
 
         footer {
             background-color: #000000;
+            padding-top: 20px;
+        }
+
+        footer p {
+            padding: 10px;
         }
 
     </style>
@@ -142,6 +148,8 @@
     </header>
 
     <div id="introduction">
+        <h1> Sign Up Now!! </h1><br>
+
         <p> "Education is important, and comprehension is key", is what we believe here in Schoogle. Many students now struggle with their 
             lessons, especially in subjects like Math. We aim to make education more understandable for students of all ages. However, 
             we cannot do that all alone. We need the manpower of tutors, and the support of students. </p></br/>
@@ -160,7 +168,7 @@
         
          <p id="imgCaption"> This is a dream for many. To complete their education and enter the working class. There are many people here all around the 
             world. Let us unite to help the future of our countries to succeed and excel without further mental stress and strain in their 
-            lives. </p></br/>
+            lives. </p></br/></br/>
 
         <div class="imgContainer">
             <img id="imageAdvertisment" src="../assets/group-diverse-grads-throwing-caps-up-sky.jpg" alt="graduating students" title="graduation" width="450px" height="300px">
@@ -301,9 +309,13 @@
     <footer>
         <div class="references"> 
             <h2> References </h2>
+            <p> Evolved Teachings. (2019, April 1). <i> The importance of education - What’s the real purpose of education? </i>
+                [Video]. YouTube. https://www.youtube.com/watch?v=ZDAdi6ZLktc </p>
             <p> GeeksforGeeks. (2025, July 23). <i> How to Toggle between Hiding and Showing an Element 
                 using JavaScript ? </i> GeeksforGeeks. https://www.geeksforgeeks.org/javascript/how-to-toggle-between-hiding-and-showing-an-element-using-javascript/</p>
             <p> <i> How to align labels next to inputs </i>. (n.d.). https://www.w3docs.com/snippets/html/how-to-align-labels-next-to-inputs.html </p>
+            <p> Rawpixels.com. (n.d.). <i> Group of diverse grads throwing caps up in the sky </i> [Image]. Freepik. 
+                https://www.freepik.com/free-photo/group-diverse-grads-throwing-caps-up-sky_3366984.htm#fromView=search&page=1&position=0&uuid=c1b31701-af4f-476a-8c69-161a93dc7bdc&query=graduation </p>
             <p> <i> W3Schools.com </i>. (n.d.). https://www.w3schools.com/howto/howto_js_navbar_sticky.asp</p>
         </div></br/>
 
